# lazycsv

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  Taskfile.yml
.github/workflows/: ci.yml
docs/: README.md  architecture.md  design.md  development.md  features.md  keybindings.md
plans/: README.md  road_map.md  roadmap.md  todo.md
scripts/: commit-msg.sh
src/: README.md  app.rs  cli.rs  csv_data.rs  document.rs  file_scanner.rs  lib.rs  main.rs  ui.rs
src/app/: constants.rs  input.rs  messages.rs  mod.rs  navigation.rs
src/csv/: document.rs  mod.rs
src/domain/: mod.rs  position.rs
src/file_system/: discovery.rs  mod.rs
src/input/: actions.rs  handler.rs  mod.rs  state.rs
src/navigation/: commands.rs  mod.rs
src/session/: mod.rs
src/ui/: help.rs  mod.rs  status.rs  table.rs  utils.rs  view_state.rs
test_data/: customers.csv  dates.csv  empty_cells.csv  long_values.csv  numbers.csv  patterns.csv  sample.csv  single_column.csv  sparse.csv  special_chars.csv  test_10k.csv  test_wide.csv  unicode.csv  very_wide.csv  whitespace.csv
tests/: README.md  app_test.rs  cli_integration_test.rs  cli_test.rs  csv_data_test.rs  csv_edge_cases_test.rs  directory_handling_test.rs  error_handling_test.rs  file_scanner_test.rs  insert_mode_test.rs  integration_workflows_test.rs  navigation_workflows_test.rs  performance_test.rs  test_data_validation_test.rs  ui_rendering_test.rs  ui_state_test.rs  ui_test.rs  v0_3_2_features_test.rs
tests/common/: mod.rs
