[package]
name = "lazycsv"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.29"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
fuzzy-matcher = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dev-dependencies]
tempfile = "3.10.1"
