[package]
name = "lazycsv"
version = "0.2.0"
edition = "2021"
description = "A blazingly fast terminal UI for viewing and editing CSV files"
authors = ["Nate Stott <nate.stott@pm.me>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/funkybooboo/lazycsv"
homepage = "https://github.com/funkybooboo/lazycsv"
keywords = ["csv", "terminal", "tui", "vim", "cli"]
categories = ["command-line-utilities", "visualization"]
readme = "README.md"

[dependencies]
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.29"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
fuzzy-matcher = "0.3"
clap = { version = "4.5.4", features = ["derive"] }
encoding_rs = "0.8.33"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dev-dependencies]
tempfile = "3.10.1"
insta = "1.40"
serial_test = "3.2"
